# devops-agent

./: .gitignore  CLAUDE.md  README.md  config.example.toml
backend/: .env  .env.example  CLAUDE.md  Cargo.toml  run-signed.sh
backend/plans/: distributed-jingling-marble.md
backend/src/: api.rs  app_config.rs  config.rs  lib.rs  main.rs
backend/src/agent/: chain_mapping.rs  claude.rs  intent.rs  mod.rs  router.rs  step.rs
backend/src/agent/steps/: claude_analyze.rs  claude_code.rs  jenkins_log.rs  jenkins_wait.rs  (+4 more)
backend/src/harness/: hook.rs  memory_hook.rs  mod.rs  orchestrator.rs  session.rs  token_hook.rs
backend/src/llm/: CLAUDE.md  anthropic_provider.rs  config_store.rs  mod.rs  openai_provider.rs  router.rs  structured_output.rs
backend/src/memory/: long_term.rs  mod.rs  short_term.rs  store.rs
backend/src/sandbox/: fs_isolation.rs  mod.rs  network_whitelist.rs  path_check.rs  process_sandbox.rs
backend/src/security/: audit.rs  mod.rs  policy.rs  roles.rs
backend/src/token/: mod.rs  summarizer.rs  tracker.rs  window.rs
backend/src/tools/: gitlab.rs  jenkins.rs  jenkins_cache.rs  mod.rs
backend/tests/: agent_e2e_test.rs  agent_simple_test.rs  harness_hook_test.rs  harness_memory_hook_test.rs  harness_orchestrator_test.rs  harness_session_test.rs  harness_token_hook_test.rs  integration_hook_test.rs  jenkins_test.rs  llm_api_integration_test.rs  llm_provider_test.rs  llm_router_test.rs  log_analysis_test.rs  memory_long_term_test.rs  memory_short_term_test.rs  sandbox_fs_test.rs  sandbox_network_test.rs  sandbox_path_test.rs  sandbox_process_test.rs  security_audit_test.rs  security_policy_test.rs  simple_agent_test.rs  step_chain_test.rs  token_summarizer_test.rs  token_tracker_test.rs  token_window_test.rs  tools_builtin_test.rs
(+27 files in other folders)
