[package]
name = "devops-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"          # Web 框架
tokio = { version = "1", features = ["full"] }  # 异步运行时
serde = { version = "1", features = ["derive"] }  # 序列化
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }  # CORS 支持
anyhow = "1"          # 错误处理
tracing = "0.1"       # 日志
tracing-subscriber = { version = "0.3", features = ["local-time", "time"] }
dotenv = "0.15"       # 环境变量
reqwest = { version = "0.12", features = ["json"] }  # HTTP 客户端
tokio-util = "0.7"    # 异步运行时工具
base64 = "0.22"       # Jenkins Basic Auth

[dev-dependencies]
ctor = "0.2"
